--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,11 @@
 <h1>User Page</h1>
 
 <h2>Hello, <%= @user.username %> </h2>
+
+
+
+<form action="<%= session_url %>" method="post">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <input type="submit" name="submit" value="Sign Out">
+</form>
