--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,10 @@
 <h1>Create User</h1>
 
+<%= render "shared/errors" %>
+<%= render "shared/messages" %>
+
 <form action="<%= users_url %>" method="post">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <%= auth_token %>
 
   <label for="user_username">Username:</label>
   <input type="text" name="user[username]" id="user_username">
