--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,3 +13,6 @@
 
   <input type="submit" name="submit" value="Create User">
 </form>
+
+
+<p>Already have an account? <a href="<%= new_session_url %>">Log In Here</a> </p>
