--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -4,3 +4,9 @@
 <%= render "shared/messages" %>
 
 <%= render "form", task: @task, action: "PATCH" %>
+<br>
+<div class="foot">
+  <a href="<%= tasks_url %>">All Tasks</a>
+  <a href="<%= users_url %>">All Users</a>
+  <a href="<%= user_url(current_user) %>">Your Page</a>
+</div>
