--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -5,3 +5,10 @@
 
 
 <%= render "form", task: @task, action: "post"%>
+
+
+<div class="foot">
+  <a href="<%= tasks_url %>">All Tasks</a>
+  <a href="<%= users_url %>">All Users</a>
+  <a href="<%= user_url(current_user) %>">Your Page</a>
+</div>
