--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,7 @@
 
 <ol>
 <% @tasks.each do |task| %>
-  <li>
+  <li class="task-li">
     <p>Title: <%= task.title %></p>
     <p>Description: <%= task.description %></p>
     <p>Owner: <%= task.owner.username %></p>
