--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -61,7 +61,7 @@
       <%= auth_token %>
       <input type="hidden" name="_method" value="DELETE">
       <input type="hidden" name="task[completed]" value="true">
-      <input type="submit" name="submit" value="Delete <%= task.title %> task">
+      <input type="submit" name="submit" value="Delete <%= task.title %> Task">
     </form>
     <br>
     <% end %>
@@ -76,5 +76,7 @@
 <div class="foot">
   <a href="<%= tasks_url %>">All Tasks</a>
   <a href="<%= users_url %>">All Users</a>
-  <a href="<%= user_url(current_user) %>">Your Page</a>
+  <% if current_user %>
+    <a href="<%= user_url(current_user) %>">Your Page</a>
+  <% end %>
 </div>
