Comments working, testing being weird

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -76,15 +76,28 @@
   <% end %>
 
   <div class="comment-box">
-    <label for="comment">Comment:
-      <textarea name="comment" rows="8" cols="80"></textarea>
 
-    </label>
-    <form class="" action="index.html" method="post">
-        <%= auth_token %>
-        <input type="submit" name="submit" value="Add Comment">
+    <form class="" action="<%= comments_url %>" method="post">
+      <%= auth_token %>
+       <input type="hidden" name="comment[imageable_id]" value="<%= @task.id %>">
+       <input type="hidden" name="comment[imageable_type]" value="<%= Task %>">
+
+      <label for="comment">Comment:
+        <textarea name="comment[content]" rows="8" cols="80"></textarea>
+
+      </label>
+          <input type="submit" name="submit" value="Add Comment">
     </form>
+
+    <div class="comment-display">
+        <% @task.comments.each do |comment| %>
+          <p>
+            <%= comment.content %>
+          </p>
+        <% end %>
+    </div>
   </div>
+
 </div>
 <br>
 <div class="foot">
